# instance-impl

./: LICENSE  README.md  instance-impl.cabal  shell.nix
src/: InstanceImpl.hs
src/InstanceImpl/: FunDepJailbreak.hs
test/: Spec.hs
