cabal-version: 1.12

name:           instance-impl
version:        0.1.0.0
synopsis:       A GHC plugin for rust style impl with -XOverloadedRecordDot
description:    Please see the README on GitHub at <https://github.com/ElderEphemera/instance-impl#readme>
category:       Compiler Plugin
homepage:       https://github.com/ElderEphemera/instance-impl#readme
bug-reports:    https://github.com/ElderEphemera/instance-impl/issues
author:         Joshua Price
maintainer:     elderephemera@gmail.com
copyright:      Copyright (c) 2021, Joshua Price
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ElderEphemera/instance-impl

library
  exposed-modules:
    InstanceImpl
    InstanceImpl.FunDepJailbreak
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
    base >= 4.16.0 && < 4.17,
    ghc >= 9.2.0 && < 9.3,
    ghc-boot-th >= 9.2.0 && < 9.3,
    mtl >= 2.2.2 && < 2.3,
    syb >= 0.7.2 && < 0.8
  default-language: Haskell2010

test-suite instance-impl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends:
    base >= 4.16.0 && < 4.17,
    instance-impl
  default-language: Haskell2010
